Fix sort button alignments and missing styling id

--- a/imports/ui/App.css
+++ b/imports/ui/App.css
@@ -52,6 +52,7 @@
   #SortButtons {
     margin-top: 3%;
     margin-bottom: 3%;
+    text-align: right !important;
   }
 
   ::-webkit-scrollbar {
